--- a/signup.html
+++ b/signup.html
@@ -18,8 +18,8 @@
             </div>
             <form>
                 <div class="form-group">
-                    <label for="exampleInputEmail" class="form-label mt-4">아이디</label>
-                    <input type="text" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp">
+                    <label for="exampleInputEmail" class="form-label mt-4">이메일</label>
+                    <input type="email" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp">
                 </div>
                 <div class="form-group has-success">
                     <label class="form-label mt-4" for="inputValid">비밀번호</label>
