--- a/find_Pw.html
+++ b/find_Pw.html
@@ -35,29 +35,25 @@
 <main class="form-signin w-100 m-auto">
   <form>
 
-    <h1 class="h3 mb-3 fw-normal">로그인</h1>
-
+    <h1 class="h3 mb-3 fw-normal">비밀번호 찾기</h1>
+    
+   <div class="form-floating">
+        <input type="text" class="form-control" id="floatingName" placeholder="홍길동">
+        <label for="floatingName">Name</label>
+      </div>
     <div class="form-floating">
-      <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-      <label for="floatingInput">Email address</label>
-    </div>
-    <div class="form-floating">
-      <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-      <label for="floatingPassword">Password</label>
+        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+        <label for="floatingInput">Email address</label>
     </div>
 
-    <div class="checkbox mb-3">
-      <label>
-        <input type="checkbox" value="remember-me"> 해당 아이디 저장
-      </label>
-    </div>
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+
+    <button class="w-100 btn btn-lg btn-primary" type="submit">비밀번호 찾기</button>
     <!-- <button class="btn" type="submit">회원가입</button>
     <button class="btn" type="submit">아이디 찾기</button>
     <button class="btn" type="submit">비밀번호 찾기</button> -->
     <div class="links">
 
-    <a href="find_Pw.html">비밀번호 찾기</a> | <a href="signup.html">회원가입</a>
+        <a href="login.html">로그인</a> | <a href="signup.html">회원가입</a>
 
   </div>
   </form>
