--- a/Mainpage_Logout.html
+++ b/Mainpage_Logout.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mainpage_Logout</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link href="Mainpage_Login.css" rel="stylesheet">
+    <link href="Mainpage.css" rel="stylesheet">
   </head>
 <body style="background-color: #efefef;">
     <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
@@ -37,133 +37,91 @@
       </nav>
       <section>
         <div class="container text-center">
-          <div class="row align-items-start">
-            <div class="row">
-              <div class="col">           
-              </div>
-              <div class="col" id="Logo">
-                <img class="logo" src="Logo.png" height="250">
-              </div>
-              <div class="col">
-              </div>
-            </div>   
-          </div>
-          <div class="row align-items-center">
-            <div class="row">
-              <div class="col">                
-              </div>
-              <div class="col" id="Logo">
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2 w-200" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success w-25" type="submit">검색</button>
-                </form>   
-              </div>
-              <div class="col">                
+            <div class="row align-items-start">
+                <div class="row">
+                    <div class="col">           
+                    </div>
+                    <div class="col" id="Logo">
+                        <img class="logo" src="Logo.png" height="250">
+                    </div>
+                    <div class="col">
+                    </div>
+                </div>   
             </div>
-            </div>   
-          </div>
+            <div class="row align-items-center">
+                <div class="row">
+                <div class="col">   
+                
+                </div>
+                <div class="col" id="Search">
+                    <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success w-25" type="submit">검색</button>
+                    </form>   
+                </div>
+                <div class="col" id="Writing">
+                
+                </div>   
+            </div>
           <br>
           <br>
-          <div class="row align-items-end">
-            <div class="row">
-              <div class="col" id="border_style">  
-                <thead>
-                  <tr>
-                    <th scope="col">질문 게시판</th>
-                  </tr>
-                  <br>
-                  <br>
-                </thead>
-                <!-- <tbody>
-                  <tr>
-                    <td class="title">
-                      <a href="#">게시글 제목이 들어감</a>
-                    </td>
-                  </tr>
-                  <br>
-                  <tr>
-                    <td class="title">
-                      <a href="#">게시글 제목이 들어감2</a>
-                    </td>
-                  </tr>
-                  <br>
-                  <tr>
-                    <td class="title">
-                      <a href="#">게시글 제목이 들어감3</a>
-                    </td>
-                  </tr>
-                  <br>
-                  <tr>
-                    <td class="title">
-                      <a href="#">게시글 제목이 들어감4</a>
-                    </td>
-                  </tr>
-                  <br>
-                  <tr>
-                    <td class="title">
-                      <a href="#">게시글 제목이 들어감5</a>
-                    </td>
-                  </tr>
-                  <br>
-                </tbody> -->
-                <div class="list-group list-group-flush">
-                  <a href="#" class="list-group-item list-group-item-action">게시글 제목이 들어감</a>
-                  <a href="#" class="list-group-item list-group-item-action">게시글 제목이 들어감2</a>
-                  <a href="#" class="list-group-item list-group-item-action">게시글 제목이 들어감3</a>
-                  <a href="#" class="list-group-item list-group-item-action">게시글 제목이 들어감4</a>
-                  <a class="list-group-item list-group-item-action">게시글 제목이 들어감5</a>
+          <br>
+          <br>
+            <div class="row align-items-center">
+                <div class="row">
+                    <div class="col">
+                      <p style="background-color: #e3f2fd;">질문 게시판</p>
+                        <table class="table table-striped ">
+                            <tr class="text-center">
+                                <th>번호</th>
+                                <th>제목</th>
+                                <th>작성자</th>
+                                <th>등록일</th>
+                                <th>조회</th>
+                            </tr>
+                            <tr>
+                                <td class="col-sm-1">1</td>
+                                <td><a href="#">안녕하세요. 질문있어요.</a></td>
+                                <td>강총무</td>
+                                <td>2023.05.29</td>
+                                <td class="col-sm-1">10</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="col">
+                      <p style="background-color: #e3f2fd;">트렌드 IT 게시판</p>
+                        <table class="table table-striped ">
+                            <tr class="text-center">
+                                <th>번호</th>
+                                <th>제목</th>
+                                <th>작성자</th>
+                                <th>등록일</th>
+                                <th>조회</th>
+                            </tr>
+                            <tr>
+                                <td class="col-sm-1">1</td>
+                                <td><a href="#">미국이 놀라고 일본이 경악한 삼성의 기술</a></td>
+                                <td>애국맨</td>
+                                <td>2023.05.27</td>
+                                <td class="col-sm-1">10</td>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
-              </div>
-              <div class="col" id="border_style">  
-                <thead>
-                  <tr>
-                    <th scope="col">트렌드 IT</th>
-                  </tr>
-                  <br>
-                  <br>
-                </thead>
-                <!-- <tbody>
-                  <tr>
-                    <td class="title">
-                      <a href="#">게시글 제목이 들어감</a>
-                    </td>
-                  </tr>
-                  <br>
-                  <tr>
-                    <td class="title">
-                      <a href="#">게시글 제목이 들어감2</a>
-                    </td>
-                  </tr>
-                  <br>
-                  <tr>
-                    <td class="title">
-                      <a href="#">게시글 제목이 들어감3</a>
-                    </td>
-                  </tr>
-                  <br>
-                  <tr>
-                    <td class="title">
-                      <a href="#">게시글 제목이 들어감4</a>
-                    </td>
-                  </tr>
-                  <br>
-                  <tr>
-                    <td class="title">
-                      <a href="#">게시글 제목이 들어감5</a>
-                    </td>
-                  </tr>
-                  <br>
-                </tbody> -->
-                <div class="list-group list-group-flush">
-                  <a href="#" class="list-group-item list-group-item-action">게시글 제목이 들어감</a>
-                  <a href="#" class="list-group-item list-group-item-action">게시글 제목이 들어감2</a>
-                  <a href="#" class="list-group-item list-group-item-action">게시글 제목이 들어감3</a>
-                  <a href="#" class="list-group-item list-group-item-action">게시글 제목이 들어감4</a>
-                  <a class="list-group-item list-group-item-action">게시글 제목이 들어감5</a>
+            </div>
+            <div class="row align-items-start">
+                <div class="col">   
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination">
+                        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                        <li class="page-item"><a class="page-link" href="#">1</a></li>
+                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                        </ul>
+                    </nav>
                 </div>
-              </div>
-            </div>   
-          </div>
+            </div>    
         </div>
       </section>
 
