--- a/Question_board_Login.html
+++ b/Question_board_Login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Question_board_Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link href="Mainpage_Login.css" rel="stylesheet">
+    <link href="Mainpage.css" rel="stylesheet">
   </head>
 <body style="background-color: #efefef;">
     <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
@@ -55,13 +55,13 @@
                 <div class="col">   
                 
                 </div>
-                <div class="col" id="Logo">
+                <div class="col" id="Search">
                     <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success w-25" type="submit">검색</button>
                     </form>   
                 </div>
-                <div class="col">
+                <div class="col" id="Writing">
                     <button class="btn btn-outline-success w-25" type="button">글쓰기</button>
                 </div>   
             </div>
