--- a/Mainpage_Logout.html
+++ b/Mainpage_Logout.html
@@ -11,26 +11,18 @@
 <body style="background-color: #efefef;">
     <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">SmartAlgo</a>
+          <img class="logo" src="nav_logo.jpg" height="40">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="view_id">
-              <!-- <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">MainPage</a>
-              </li> -->
-              <li class="login_confirm invisible">
-                <a class="nav-link" type="text">user_id</a> <!-- 로그인 되어 있으면 아이디 표시, 로그아웃 상태일때는 표시 없고 로그인 버튼 따로 있음 -->
-              </li>
-            </ul> 
+          <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav" id="check_login">
               <li class="nav-item">
                 <a class="nav-link" href="#">Login</a> <!-- 로그인 되어 있을때만 존재 -->
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Sign up</a> <!-- 로그인 되어 있을때만 존재 -->
-              </li>
+              </li>             
             </ul>
           </div>
         </div>
