--- a/Trend_IT_Login.html
+++ b/Trend_IT_Login.html
@@ -11,7 +11,7 @@
 <body style="background-color: #efefef;">
     <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">SmartAlgo</a>
+          <img class="logo" src="nav_logo.jpg" height="40">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -39,7 +39,7 @@
       </nav>
       <section>
         <div class="container text-center">
-            <div class="row align-items-start">
+            <div class="row align-items-center">
                 <div class="row">
                 <div class="col">           
                 </div>
@@ -49,27 +49,11 @@
                 <div class="col">
                 </div>
                 </div>   
-            </div>
+            </div>           
+          <br>
+
             <div class="row align-items-center">
-                <div class="row">
-                <div class="col">   
-                
-                </div>
-                <div class="col" id="Search">
-                    <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success w-25" type="submit">검색</button>
-                    </form>   
-                </div>
-                <div class="col" id="Writing">
-                  <button class="btn btn-outline-success w-25" type="button">글쓰기</button>
-                </div>   
-            </div>
-          <br>
-          <br>
-          <br>
-          <br>
-            <div class="row align-items-center">
+                <p style="background-color: #dee2e6; font-size: 20px;">질문 게시판</p>
                 <table class="table table-striped ">
                     <tr class="text-center">
                         <th>번호</th>
@@ -87,9 +71,27 @@
                     </tr>
                 </table>
             </div>
-            <div class="row align-items-start">
+            <div class="row align-items-center">
+                <div class="row">
+                    <div class="col" id="Writing">
+                        <button class="btn btn-outline-success w-25" type="button" style="float: left;">글쓰기</button>
+                      </div>   
+                    <div class="col">                       
+                    </div>   
+                    <div class="col" id="Search">
+                        <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success w-25" type="submit">검색</button>
+                        </form>   
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="row align-items-center">
+                <div class="col">                       
+                </div> 
                 <div class="col">   
-                    <nav aria-label="Page navigation example">
+                    <nav aria-label="Page navigation example" style="margin-left: 20%;">
                         <ul class="pagination">
                         <li class="page-item"><a class="page-link" href="#">Previous</a></li>
                         <li class="page-item"><a class="page-link" href="#">1</a></li>
@@ -99,6 +101,8 @@
                         </ul>
                     </nav>
                 </div>
+                <div class="col">                       
+                </div> 
             </div>    
         </div>
       </section>
