글쓰기 큰 틀 완성

--- a/Question_board_Login.html
+++ b/Question_board_Login.html
@@ -15,20 +15,7 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="view_id">
-              <!-- <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">MainPage</a>
-              </li> -->
-              <li class="login_confirm">
-                <a class="nav-link" type="text">user_id</a> <!-- 로그인 되어 있으면 아이디 표시, 로그아웃 상태일때는 표시 없고 로그인 버튼 따로 있음 -->
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" type="text">질문 게시판</a> 
-            </li> 
-
-              
-            </ul> 
+          <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav" id="check_login">
               <li class="nav-item">
                 <a class="nav-link" href="#">Logout</a> <!-- 로그인 되어 있을때만 존재 -->
