--- a/html/Trend_IT_Logout.html
+++ b/html/Trend_IT_Logout.html
@@ -4,29 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Question_board_Login</title>
+    <title>Trend_IT_Logout</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="Mainpage.css" rel="stylesheet">
   </head>
 <body style="background-color: #efefef;">
     <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
         <div class="container-fluid">
-            <img class="logo" src="nav_logo.jpg" height="40">
+            <img class="logo" src="nav_logo.jpg" height="40" onClick="location.href='index.jsp'">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav" id="check_login">
-              <li class="nav-item">
-                <a class="nav-link" href="#">Logout</a> <!-- 로그인 되어 있을때만 존재 -->
-              </li>
-            </ul>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Login</a> <!-- 로그인 되어 있을때만 존재 -->
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Sign up</a> <!-- 로그인 되어 있을때만 존재 -->
+                </li>
+              </ul>
           </div>
         </div>
       </nav>
       <section>
         <div class="container text-center">
-            <div class="row align-items-center">
+            <div class="row align-items-start">
                 <div class="row">
                 <div class="col">           
                 </div>
@@ -60,10 +63,11 @@
             </div>
             <div class="row align-items-center">
                 <div class="row">
-                    <div class="col" id="Writing">
-                        <button class="btn btn-outline-success w-25" type="button" style="float: left;">글쓰기</button>
-                      </div>   
-                    <div class="col">                       
+                    <div class="col">   
+                    
+                    </div>
+                    <div class="col">
+                        
                     </div>   
                     <div class="col" id="Search">
                         <form class="d-flex" role="search">
@@ -73,7 +77,6 @@
                     </div>
                 </div>
             </div>
-            <br>
             <div class="row align-items-center">
                 <div class="col">                       
                 </div> 
@@ -90,7 +93,7 @@
                 </div>
                 <div class="col">                       
                 </div> 
-            </div>    
+            </div>       
         </div>
       </section>
       <script src="Trend_IT.js"></script>
