id='post_title' 만들고 해당 css에 하이퍼링크, 줄 넘김시 ... 구현

--- a/html/View_content_Login.html
+++ b/html/View_content_Login.html
@@ -59,7 +59,8 @@
                       <form role="form" action="/board/create_action" method="post">
                         <div class="table-responsive" style="text-align:center;">
                           <table id="datatable-scroller"
-                            class="table table-bordered" style="border-color: black;">
+                            class="table table-bordered" style="border-color: b
+                            lack;">
                             <caption></caption>
                             <colgroup>
                               <col width="250px" />
