--- a/html/Mainpage_Login.html
+++ b/html/Mainpage_Login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mainpage_Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link href="Mainpage.css" rel="stylesheet">
+    <link rel="stylesheet" href="Mainpage.css">
   </head>
 <body style="background-color: #efefef;">
     <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
@@ -78,7 +78,7 @@
                             </tr>
                             <tr>
                                 <td class="col-sm-1">1</td>
-                                <td><a href="#">안녕하세요. 질문있어요.</a></td>
+                                <td><a href="#" id="post_title">안녕하세요. 질문있어요.</a></td>
                                 <td>강총무</td>
                                 <td>2023.05.29</td>
                                 <td class="col-sm-1">10</td>
@@ -97,7 +97,7 @@
                             </tr>
                             <tr>
                                 <td class="col-sm-1">1</td>
-                                <td><a href="#">미국이 놀라고 일본이 경악한 삼성의 기술</a></td>
+                                <td><a href="#" id="post_title">미국이 놀라고 일본이 경악한 삼성의 기술</a></td>
                                 <td>애국맨</td>
                                 <td>2023.05.27</td>
                                 <td class="col-sm-1">10</td>
