댓글 폼 임시본

--- a/html/View_content_Login.html
+++ b/html/View_content_Login.html
@@ -46,7 +46,7 @@
                 <div class="col">                
                 </div>
                 <div class="col">
-                  <button class="btn btn-outline-success w-25" type="submit">목록</button>
+                  <button class="btn btn-outline-dark w-15" type="submit">목록</button>
                 </div>
               </div>   
            </div>
@@ -112,8 +112,11 @@
             <div class="card shadow-0 border" style="background-color: #f0f2f5;">
               <div class="card-body p-4">
                 <div class="form-outline mb-4">
+                  <form>
                   <input type="text" id="write_comment" class="form-control" placeholder="댓글을 작성해주세요..." />
-                  <a href="#" label class="comment_button" id="add_comment">+ 댓글 추가하기</a>
+                    <a label class="comment_button" id="add_comment" type="submit">+ 댓글 추가하기</a>
+                  </form>
+
                 </div>
         
                 <div class="card mb-4">
