--- a/html/login.html
+++ b/html/login.html
@@ -41,11 +41,11 @@
   </div>
     <div class="form-floating">
       <input type="text" class="form-control" id="floatingInput" placeholder="idididid">
-      <label for="floatingInput">Id</label>
+      <label for="floatingInput">아이디</label>
     </div>
     <div class="form-floating">
       <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-      <label for="floatingPassword">Password</label>
+      <label for="floatingPassword">비밀번호</label>
     </div>
 
     <div class="checkbox mb-3">
